# zone-backend

./: .dialyzer_ignore.exs  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Makefile  Makefile.win  README.md  bench_adversarial.exs  bench_compare.exs  fly.toml  mix.exs
.github/workflows/: build-image.yml  casync-interop.yml  ci.yml  fly-deploy.yml  release.yml
apps/uro_loop/: mix.exs
bench/ipyhop/: blocks_init1_goal1a.jsonld  blocks_init2_goal2a.jsonld  blocks_init3_goal3.jsonld  simple_travel_t1.jsonld  simple_travel_t2.jsonld
c_src/: CMakeLists.txt  Makefile  taskweft_nif.cpp
c_src/guest/: content_embed.S
c_src/guest/content/: loot.scm  progression.scm  record-macros.scm
c_src/host_test/: verify_alt_strategies.cpp  verify_float_determinism.cpp  verify_guest.cpp  verify_lisp1.cpp  verify_planner.cpp  verify_rebac.cpp  verify_s7.cpp  verify_s7_fidelity.cpp
c_src/lisp1/: compiler.cpp  compiler.h  elf_builder.cpp  elf_builder.h  ir.h  riscv_codegen.cpp  riscv_codegen.h
c_src/lockstep/: README.md  cbmc_associativity.c  cbmc_equivalence.c  finite_check.h  fixedpoint.h  guest_alt.c  softfloat_mini.h  validate_softfloat.c  vector3.c  vector3.h
c_src/nif/: weft_sandbox_nif.cpp
c_src/s7/: codegen.cpp  codegen.h  compiler.cpp  compiler.h  elf_builder.cpp  elf_builder.h  host_math.h  ir.h  ir_interpreter.cpp  ir_interpreter.h  reader.cpp  reader.h  riscv_codegen.cpp  riscv_codegen.h  s7c.cpp  value.h
c_src/s7/fixtures/: basic.scm  planner.scm  rebac.scm
config/: config.exs
deploy/: .gitignore  Containerfile  README.md  mix.exs
deploy/config/: config.exs
docs/: bench_tmp_adversarial.exs  rectgtn.md  todo.md
docs/adr/: 0003-khr-interactivity-tier2-execution-strategy.md  0004-unify-domain-capabilities-with-rebac-graph.md  0005-favor-search-over-hand-authored-heuristics.md
docs/decisions/: 0001-real-hrr-lean-module-no-shared-r128.md  0002-reject-taskweft-nif-for-hrr.md  0003-hrr-pure-elixir-no-nif-no-lean.md  0004-idtxcli-tag-manifest-heuristics.md  0005-shared-file-semantic-tags-side-table.md  0006-uro-tagging-module.md  0007-similarity-search-linear-scan-no-ann.md  0008-appsignal-for-otel-telemetry.md  0009-fly-tigris-s3-for-aria-storage.md  0010-generate-secrets-submodule-to-subtree.md  0011-fly-redeploy-scope-uro-and-crdb-only.md  0012-precompiled-signed-fabric-flow-adapters-dep.md  0013-slow-migration-taskweft-to-weft-warp-burrito.md  0014-vendor-taskweft-and-weft-warp-burrito-as-subtrees.md  0015-extract-taskweft-rebac-and-sandbox-into-lib.md  0016-merge-taskweft-nif-native-build-into-uro.md  0017-merge-weft-warp-burrito-native-build-into-uro.md  0018-bignum-beam-integers-host-call-trampoline.md  0019-s7-aot-compiler-no-cross-toolchain.md  0020-loot-loop-mvp-vs-module-cassie.md  0021-guestvalue-handle-syscalls.md  0022-rebac-sandbox-adapter-config-flip.md  0023-planner-sandbox-adapter-config-flip.md  0024-bitwise-primitives.md  0025-cond-and-named-let.md  0026-loop-core-aot-port.md  0027-loop-core-actor.md  0028-temporal-plain-elixir-port.md  0029-sol-tree-plain-elixir-port.md  0030-replan-plain-elixir-port.md  0031-witness-oracle-skipped.md  0032-hrr-plain-elixir-port.md  0033-retriever-plain-elixir-port.md  0034-mc-executor-plain-elixir-port.md  0035-bridge-plain-elixir-port.md  0036-domain-state-value-json-not-ported.md  0037-explain-plain-elixir-port.md  0038-retire-native-taskweft-nif.md  0039-retire-s7-sandbox-plain-elixir-ports.md  0040-godot-sandbox-program-api-surface.md  (+3 more)
flow/: CMakeLists.txt
flow/examples/: .gitignore  fanout_core_ffi.cpp  fanout_load_client_main.actor.cpp  fanout_server_main.actor.cpp  hello_actor.actor.cpp  ir_compiled_content_test.cpp  libriscv_vendor_test.cpp  pixi.toml  s7_riscv_actor.actor.cpp  s7_riscv_actor_test.cpp  s7_riscv_core.h  s7_riscv_macro_test.cpp  s7_riscv_sandbox_abi_test.cpp  s7_riscv_shrubbery_reader_test.cpp  s7_riscv_taskweft_capabilities_test.cpp  s7_riscv_taskweft_floydwarshall_test.cpp  s7_riscv_taskweft_layer6_integration_test.cpp  s7_riscv_taskweft_lite_golden_test.cpp  s7_riscv_taskweft_rebacgoal_test.cpp  s7_riscv_taskweft_reentrantplanner_test.cpp  s7_riscv_taskweft_temporal_test.cpp  s7_riscv_taskweft_unifiedgtn_test.cpp  s7_riscv_taskweft_witnessdag_test.cpp  sketch_core_ffi.cpp  sketch_core_ffi.h  test_sketch_convergence.py
flow/flow/: Net2.cpp  Platform.cpp  network.cpp
lean/: ArrangementProbe.lean  CassieAvbd.lean  CassieGeogram.lean  CassieObj.lean  CassiePmp.lean  CassiePolylinesJson.lean  CheckNoFma.lean  CyclePatch.lean  CycleSweep.lean  HatDump.lean  JsonFloatTest.lean  JsonTest.lean  KHRTier1Witness.lean  LockstepDeterminism.lean  NodeAugmentSmoke.lean  ObjProbe.lean  README.md  StrokeDiff.lean  SurfaceFair.lean  TransportSmoke.lean  WalkProbe.lean  lake-manifest.json  lakefile.lean
lean/CassieAvbd/: CgUbershader.lean  CgUbershader3.lean  CgUbershader3Serial.lean  Codegen.lean  CurveCasteljau.lean  CurveGenerateBezier.lean  CurveNewton.lean  CurveRdp.lean  CycleDetect.lean  CycleDetectKernel.lean  MasPreconditioner.lean  MasPreconditionerSerial.lean  PolarDecomp.lean  Step.lean
lean/CassieGeogram/: Delaunay.lean
lean/CassiePmp/: Mesh.lean
lean/HRR/: Properties.lean
lean/Planner/: Iso8601Duration.lean
lean/_bench/: arrangement_parity_65.json  grand_union_baseline.json
lib/: taskweft.ex
lib/taskweft/: application.ex  cli.ex  mc_executor.ex  nif.ex  rebac.ex
multiplayer-fabric-generate-secrets/: generate-secrets.sh
plans/: gepa-reflective-cycle.md
scripts/: format_lean.py  format_lisp.py
standalone/: fine.hpp  tw_domain.hpp  tw_hrr.hpp  tw_json.hpp  tw_loader.hpp  tw_mc_executor.hpp  tw_planner.hpp  tw_rebac.hpp  tw_replan.hpp  tw_retriever.hpp  tw_soltree.hpp  tw_state.hpp  tw_temporal.hpp  tw_value.hpp  tw_witness_oracle.hpp
taskweft/: .env.example  CITATION.cff  README.md  fly.toml  mix.exs
taskweft_nif/: .gitignore  mix.exs
taskweft_rebac/: .gitignore  mix.exs
test/: aria_storage_desync_test.exs  test_helper.exs  weft_warp_burrito_test.exs
weft_warp_burrito/: .gitignore  README.md
(+301 files in other folders)
